Updated the script to ensure that the code that prints the output is printed on the HTL document. This is usefull for learning purposes and for future reference

--- a/Challenge_Code.Rmd
+++ b/Challenge_Code.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 
 #libraries
-```{r echo=FALSE, fig.align='center', fig.height=12, fig.width=12, message=FALSE, warning=FALSE}
+```{r echo= TRUE, fig.align='center', fig.height=12, fig.width=12, message=FALSE, warning=FALSE}
 library(dplyr)    # Data manipulation
 library(tidyr)    # Data tidying
 library(stringr)  # String manipulation
@@ -25,7 +25,7 @@ library (tmaptools)#additional tools for maps
 ```
 
 # changing .xlsx to csv 
-```{r echo=FALSE, fig.align='center', fig.height=12, fig.width=12, message=FALSE, warning=FALSE}
+```{r echo= TRUE, fig.align='center', fig.height=12, fig.width=12, message=FALSE, warning=FALSE}
 # Correct file path
 #excel_file <- "C:/Users/Cordio ea/Documents/Jane Daisy_Challenge/Mangrove_sample_data.xlsx"
 
@@ -46,7 +46,7 @@ site_coordinates <- read.csv(data_locale)
 head(site_coordinates, 5)
 ```
 
-```{r echo=FALSE, fig.align='center', fig.height=12, fig.width=12, message=FALSE, warning=FALSE}
+```{r echo=TRUE, fig.align='center', fig.height=12, fig.width=12, message=FALSE, warning=FALSE}
 
 coordinate_extracted <- site_coordinates %>%
   mutate(
@@ -67,7 +67,7 @@ head(coordinate_extracted, 5)
 
 ```
 
-```{r echo=FALSE, fig.align='center', fig.height=12, fig.width=12, message=FALSE, warning=FALSE}
+```{r echo=TRUE, fig.align='center', fig.height=12, fig.width=12, message=FALSE, warning=FALSE}
 coordinate_cleaned <- coordinate_extracted %>%
   mutate(
     # Clean Latitude and Longitude Degrees, Minutes, and Seconds
@@ -100,7 +100,7 @@ head(DD_coordinates, 5)
 
 
 
-```{r echo=FALSE, fig.align='center', fig.height=12, fig.width=12, message=FALSE, warning=FALSE}
+```{r echo=TRUE, fig.align='center', fig.height=12, fig.width=12, message=FALSE, warning=FALSE}
 # Convert to sf object (Spatial Data Frame)
 sf_data <- st_as_sf(DD_coordinates, coords = c("Long_decimal", "Lat_decimal"), crs = 4326)
 
@@ -115,7 +115,7 @@ st_write(sf_data, shapefile_path, delete_layer = TRUE)
 
 ```
 # Steps to Create a Map with Categories
-```{r echo=FALSE, fig.align='center', fig.height=12, fig.width=12, message=FALSE, warning=FALSE}
+```{r echo=TRUE, fig.align='center', fig.height=12, fig.width=12, message=FALSE, warning=FALSE}
 
 # Load the shapefile
 #sf_map <- st_read("shapefile_path")
@@ -135,7 +135,7 @@ st_write(sf_data, shapefile_path, delete_layer = TRUE)
 
 ```
 
-```{r echo=FALSE, fig.align='center', fig.height=12, fig.width=12, message=FALSE, warning=FALSE}
+```{r echo=TRUE, fig.align='center', fig.height=12, fig.width=12, message=FALSE, warning=FALSE}
 
 # Load the mangrove points (output_shapefile)
 #sf_mangrove <- st_read("C:/Users/Cordio ea/Documents/Jane Daisy_Challenge/output_shapefile.shp")
